working paginated translation ready

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,11 @@
       crowdin.com in-context localization
       See https://support.crowdin.com/in-context-localization/
     -->
-  <!-- <script type="text/javascript">
+  <script>
     var _jipt = [];
     _jipt.push(['project', 'cboard']);
-
   </script>
-  <script type="text/javascript" src="//cdn.crowdin.com/jipt/jipt.js"></script> -->
+  <script src="//cdn.crowdin.com/jipt/jipt.js"></script>
 
   <!--
       manifest.json provides metadata used when your web app is added to the
